--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -1,8 +1,9 @@
 {{ define "main" }}
+{{ range where .Site.Pages "Type" "home" }}
+{{ $section := .Params.section }}
+
+{{ if eq $section "hero" }}
 <!-- Section 1- Hero -->
- <!-- <section class="vh-100 d-flex align-items-center justify-content-center">
-  <h1 class="text-center tagline display-1">TrainingSmiths</h1>
- </section> -->
 <section class="hero gradient-bg d-flex align-items-md-center">
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
@@ -10,15 +11,15 @@
         <h1 
           class="title text-light display-6 fw-bold" 
           data-aos="fade-up" 
-          data-aos-delay="0">Is your business or organization struggling to achieve its goals and energize your team?</h1>
+          data-aos-delay="0">{{ .Params.title }}</h1>
       
         <p 
           class="subtitle my-4  text-primary--light" 
           data-aos="fade-up" 
-          data-aos-delay="200">and is your team find it difficult to meet deadlines, improve productivity, and stay aligned...?</p>
+          data-aos-delay="200">{{ .Params.subtitle }}</p>
         
         <p class="mb-0 my-md-4 fst-italic tagline" data-aos="fade-up" 
-        data-aos-delay="400">Discover how ESPeople TrainingSmiths can help..</p>
+        data-aos-delay="400">{{ .Params.description }}</p>
         <a href="#hero-details"
           class=" btn btn-light mt-4" 
           data-aos="fade-up" 
@@ -102,23 +103,24 @@
     </div>
   </div>
 </section>
+
 <!-- hero sec 2 -->
 <section id="hero-details" class="hero-desc pt-5 px-3 px-md-0">
   <div class="container">
     <div class="row text-center">
       <div class="col-md-8 mx-auto">
-        
-        <p class="solution fst-italic" data-aos="fade-up" 
+        {{ .Content }}
+        <p class="solution fst-italic d-inline" data-aos="fade-up" 
         data-aos-delay="600">
-          At ESPeople, we energize and synergize your teams to achieve tactical and strategic goals through collaborative efforts.
-We integrate your team’s full collective potential and optimize your management & leadership capabilities towards mission accomplishments.
-
-That’s why we at ESPeople have developed solutions tailored to meet the needs of four distinct groups of <a href="#clientele" class="text-underline text-primary">beneficiaries</a>...
+           <a href="#clientele" class="text-underline text-primary">beneficiaries</a>...
         </p>
       </div>
     </div>
   </div>
 </section>
+{{ end }}
+
+{{ if eq $section "clientele" }}
 <!-- section 2 - for whom we deliver -->
 <section id="clientele" class="clientele py-5 px-4 px-md-0">
   <div class="container">
@@ -163,233 +165,73 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
 </section>
 <!-- sec 3 - clientele brief -->
 <section class="clientele-brief py-custom gradient-bg">
-  <h1 class="text-center mb-5">Our Learning Solutions</h1>
-  <!-- <hr class="accent"> -->
-  <!-- <hr class="bg-accent"> -->
+  <h1 class="text-center mb-5">{{ .Title }}</h1>
 
-  <!-- Business Organizations -->
-  <div id="esp-business" class="px-4 px-md-0 py-5">
+  {{ range .Params.learning_solutions }}
+  <div id="{{ .id }}" class="px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 order-md-1">
+        <div class="col-md-4">
+          <img src="{{ .image }}" alt="{{ .title }} Icon" class="image">
+        </div>
+        <div class="col-md-8">
           <h3 class="title mt-4 mt-md-0">
-            <i class="fa-solid fa-business-time"></i>ESP Business</h3>
+            <i class="fa-solid {{ .icon }}"></i> {{ .title }}
+          </h3>
           <hr>
-          
-          <p>We deliver transformative, contemporary People Developmental Learning for desired results of
-                your business.</p>
-          <p>It will enhance executive and managerial productivity with leadership optimization for your organization.
-          </p>
-          <p>
-            Thus ESPeople facilitates for desired organizational ranking within your industry through your
-                people.
-          </p>
-          <section class="row align-items-center mt-4 justify-content-between justify-content-md-start gap-3 btn-row">  
-            <div class="col-12 col-md-auto">  
-              <a href="/clientele-beneficiaries/esp-business" class="btn btn-primary">Know more</a>  
-            </div>  
-            <!-- PDF Icon with Dropdown for Brochure -->  
-            <div class="col-auto dropdown mt-2 mt-md-0">  
-              <a class="btn btn-primary--outline d-flex align-items-center" href="#" role="button"  
-                id="brochureDropdown" data-bs-toggle="dropdown" aria-expanded="false">  
-                <i class="fa-regular fa-file-pdf me-2"></i>Brochure  
-              </a>  
-              <ul class="dropdown-menu" aria-labelledby="brochureDropdown">  
-                <li class="d-none d-md-block">  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Business.pdf" target="_blank"  
-                    rel="noopener noreferrer">  
-                    <i class="fa-regular fa-eye me-1"></i>View Brochure  
-                  </a>  
-                </li>  
-                <li>  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Business.pdf" download>  
-                    <i class="fa-solid fa-download me-1"></i>Download Brochure  
-                  </a>  
-                </li>  
-              </ul>  
-            </div>  
-            <!-- YouTube Icon with Link to Open Modal -->  
-            <!-- <div class="col-auto">  
-              <a href="#videoModal" data-bs-toggle="modal" class="btn btn-primary--outline d-flex w-auto align-items-center justify-content-between">  
-                <i class="fa-brands fa-youtube me-2"></i>Watch Video  
-              </a>  
-            </div>   -->
-          </section>
-        </div>
-        <div class="col-md-6 order-first">
-          <img src="/images/manufacturing-business.png" alt="Business Icon" class="image">
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- <hr class="bg-accent"> -->
-  <!-- Non-Profit Organizations -->
-  <div id="esp-nonprofit" class="px-4 px-md-0 py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6 order-first">
-          <img src="/images/non-profit-1.png" alt="Non-Profit Icon" class="image">
-        </div>
-        <div class="col-md-6">
-          <h3 class="title mt-4 mt-md-0"><i class="fa-solid fa-building-ngo"></i>ESP Non-Profit</h3>
-          <hr>
-          
-          <p>Our learning solutions are different, unique & transformative for non profits.
-          </p>
-          <p>
-            Their service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of
-            resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejecting
-            environment, constantly networking for volunteers to support social cause etc, are configured as prime
-            important in our learning solutions.
-          </p>
-          <p>
-            ESPeople indulgence are aimed at achieving non-profits immediate desired outcomes & long term
-                impacts through their projects and programs to their community.
-          </p>
-          <!-- </p> -->
-          <section class="row align-items-center mt-4 justify-content-between justify-content-md-start gap-3 btn-row">  
-            <div class="col-12 col-md-auto">  
-              <a href="/clientele-beneficiaries/esp-non-profit" class="btn btn-primary">Know more</a>  
-            </div>  
-            <!-- PDF Icon with Dropdown for Brochure -->  
-            <div class="col-auto dropdown mt-2 mt-md-0">  
-              <a class="btn btn-primary--outline d-flex align-items-center" href="#" role="button"  
-                id="brochureDropdown" data-bs-toggle="dropdown" aria-expanded="false">  
-                <i class="fa-regular fa-file-pdf me-2"></i>Brochure  
-              </a>  
-              <ul class="dropdown-menu" aria-labelledby="brochureDropdown">  
-                <li class="d-none d-md-block">  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Non_Profit.pdf" target="_blank"  
-                    rel="noopener noreferrer">  
-                    <i class="fa-regular fa-eye me-1"></i>View Brochure  
-                  </a>  
-                </li>  
-                <li>  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Non_Profit.pdf" download>  
-                    <i class="fa-solid fa-download me-1"></i>Download Brochure  
-                  </a>  
-                </li>  
-              </ul>  
-            </div>  
-            <!-- YouTube Icon with Link to Open Modal -->  
-            <!-- <div class="col-auto">  
-              <a href="#videoModal" data-bs-toggle="modal" class="btn btn-primary--outline d-flex w-auto align-items-center justify-content-between">  
-                <i class="fa-brands fa-youtube me-2"></i>Watch Video  
-              </a>  
-            </div>   -->
-          </section>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- <hr class="bg-accent"> -->
-  <!-- Education Sector -->
-  <div id="esp-education" class="px-4 px-md-0 py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6 order-first">
-          <img src="/images/education-icon.png" alt="Education Icon" class="image">
-        </div>
-        <div class="col-md-6 order-md-1">
-          <h3 class="title mt-4 mt-md-0"><i class="fa-solid fa-user-graduate"></i>ESP Education</h3>
-          <hr>
-          
-          <p>We empower educators and students to innovate & collaborate, fostering growth-oriented
-                learning in the journey towards academic excellence.</p>
-          <p>Beneficiaries are students, faculty & academic leaders in schools, polytechnics, colleges & universities.
-          </p>
-          <p>
-            Thus, ESPeople develop the next generation of youth for tomorrow's nation.
-          </p>
-          <section class="row align-items-center mt-4 justify-content-between justify-content-md-start gap-3 btn-row">  
-            <div class="col-12 col-md-auto">  
-              <a href="/clientele-beneficiaries/esp-education" class="btn btn-primary">Know more</a>  
-            </div>  
-            <!-- PDF Icon with Dropdown for Brochure -->  
-            <div class="col-auto dropdown mt-2 mt-md-0">  
-              <a class="btn btn-primary--outline d-flex align-items-center" href="#" role="button"  
-                id="brochureDropdown" data-bs-toggle="dropdown" aria-expanded="false">  
-                <i class="fa-regular fa-file-pdf me-2"></i>Brochure  
-              </a>  
-              <ul class="dropdown-menu" aria-labelledby="brochureDropdown">  
-                <li class="d-none d-md-block">  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Education.pdf" target="_blank"  
-                    rel="noopener noreferrer">  
-                    <i class="fa-regular fa-eye me-1"></i>View Brochure  
-                  </a>  
-                </li>  
-                <li>  
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Education.pdf" download>  
-                    <i class="fa-solid fa-download me-1"></i>Download Brochure  
-                  </a>  
-                </li>  
-              </ul>  
-            </div>  
-            <!-- YouTube Icon with Link to Open Modal -->  
-            <!-- <div class="col-auto">  
-              <a href="#videoModal" data-bs-toggle="modal" class="btn btn-primary--outline d-flex w-auto align-items-center justify-content-between">  
-                <i class="fa-brands fa-youtube me-2"></i>Watch Video  
-              </a>  
-            </div>   -->
-          </section>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- <hr class="bg-accent"> -->
-  <!-- Government Organizations -->
-  <div id="esp-government" class="px-4 px-md-0 py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6 order-first">
-          <img src="/images/government-org.png" alt="Government Icon" class="image">
-        </div>
-        <div class="col-md-6 order-md-2">
-          <h3 class="title mt-4 mt-md-0"><i class="fa-solid fa-landmark"></i>ESP Government</h3>
-          <hr>
-          
-          <p>
-              We align & train Government teams to work towards efficient, transparent good governance for
-                impactful public service in the process of nation building.
-            </p>
-          <p>Besides, we can join hands with the Governance team to successfully create awareness, alignment with
-            various stake holders and public in connection with various programs & projects Government sets as a
-            priority goals for nations growth & development.</p>
-          <p>ESPeople efforts are invested through its learning solutions for Nations priority growth &
-                development Roadmap</p>
-          <section
-            class="row align-items-center mt-4 justify-content-between justify-content-md-start gap-3 btn-row">
-            <div class="col-12 col-md-auto"><a href="/clientele-beneficiaries/esp-government" class="btn btn-primary">Know more</a></div>
-            <!-- PDF Icon with Dropdown for Brochure -->
-            <div class="col-auto dropdown ">
-              <a class="btn btn-primary--outline d-flex align-items-center " href="#" role="button"
-                id="brochureDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa-regular fa-file-pdf me-2"></i>Brochure
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                <li class="d-none d-md-block">
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Government.pdf" target="_blank"
-                    rel="noopener noreferrer">
-                    <i class="fa-regular fa-eye me-1"></i>View Brochure
-                  </a>
-                </li>
-                <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-Brochure-Government.pdf" download><i
-                      class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
-              </ul>
+          {{ range .description }}
+          <p>{{ . }}</p>
+          {{ end }}
+          <section class="row align-items-center mt-4 justify-content-center justify-content-md-start gap-3 btn-row">
+            <div class="col-auto">
+              <a href="{{ .links.know_more }}" class="btn btn-primary">Know more</a>
             </div>
-            <!-- YouTube Icon with Link to Open Modal -->
-            <!-- <div class="col-auto">
-              <a href="#videoModal" data-bs-toggle="modal"
-                class="btn btn-primary--outline  d-flex w-auto align-items-center justify-content-between">
-                <i class="fa-brands fa-youtube me-2"></i>Watch Video
+            <!-- Button to Trigger the Modal -->
+            <div class="col-auto">
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#{{ .id }}Modal">
+                <i class="fa-regular fa-eye me-1"></i> View brochure
+              </button>
+            </div>
+          
+            <!-- Bootstrap Modal -->
+            <div class="modal fade" id="{{ .id }}Modal" tabindex="-1" aria-labelledby="{{ .id }}ModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered modal-xl">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="{{ .id }}ModalLabel">{{ .title }} Brochure</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <iframe src="https://drive.google.com/file/d/{{ .links.brochure.FILE_ID }}/preview" 
+                      title="Brochure {{ .title }}"
+                      width="100%" height="500px" style="border: none;">
+                    </iframe>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          
+            <div class="col-auto">
+              <a href="{{ .links.brochure.download_link | relURL }}" download class="btn btn-primary--outline">
+                <i class="fa-solid fa-download me-1"></i> Download brochure
               </a>
-            </div> -->
+            </div>
           </section>
+          
         </div>
+        
       </div>
     </div>
   </div>
+  {{ end }}
 </section>
+
+{{ end }}
+
+{{ if eq $section "evolution" }}
 <!-- sec 4 - evolution -->
 <section id="evm" class="evolution-section px-4 px-md-0">
   <div class="container">
@@ -430,6 +272,10 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
   <!-- Wave Divider -->
   <div class="wave-divider"></div>
 </section>
+{{ end }}
+
+{{ if eq $section "lcw" }}
+
 <section id="lcw" class="why-espeople py-custom px-4 px-md-0">
   <div class="container">
     <h2 class="display-5 text-center mb-4" data-aos="fade-down">Why ESPeople</h2>
@@ -485,6 +331,7 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
     </div>
   </div>
 </section>
+{{ end }}
 
 <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
@@ -500,4 +347,6 @@ That’s why we at ESPeople have developed solutions tailored to meet the needs 
     </div>
   </div>
 </div>
+
+{{ end }}
 {{ end }}
