homeog view brochure hide

--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -187,7 +187,7 @@
               <a href="{{ .links.know_more }}" class="btn btn-primary">Know more</a>
             </div>
             <!-- Button to Trigger the Modal -->
-            <div class="col-auto">
+            <div class="col-auto d-none">
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#{{ .id }}Modal">
                 <i class="fa-regular fa-eye me-1"></i> View brochure
               </button>
