--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -29,7 +29,7 @@
         </a>
       </div>
       
-      <div class="col-md-5 px-0 px-md-2 order-first order-md-2">
+      <div class="col-md-5 px-0 px-md-2 order-first order-md-2" data-aos="fade-up" data-aos-delay="800">
         <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1300">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -108,7 +108,7 @@
 <section id="hero-details" class="hero-desc pt-5 px-3 px-md-0">
   <div class="container">
     <div class="row text-center">
-      <div class="col-md-8 mx-auto">
+      <div class="col-md-8 mx-auto" data-aos="fade-up">
         {{ .Content }}
         <p class="solution fst-italic d-inline" data-aos="fade-up" 
         data-aos-delay="600">
@@ -127,32 +127,32 @@
     <div class="row align-items-center justify-content-around">
       <!-- Left Section (Text) -->
       <div class="col-md-4 text-center text-md-start">
-        <h1 class="title display-5 fw-bold">Clientele</h1>
-        <h3 class="subtitle mb-3">Our Beneficiaries</h3>
-        <p class="desc">Whom we empower with our <br> ESP learning solutions....?</p>
+        <h1 class="title display-5 fw-bold" data-aos="fade-down">Clientele</h1>
+        <h3 class="subtitle mb-3" data-aos="fade-down" data-aos-delay="200" >Our Beneficiaries</h3>
+        <p class="desc" data-aos="fade-down" data-aos-delay="400">Whom we empower with our <br> ESP learning solutions....?</p>
       </div>
       <!-- Right Section (Cards) -->
       <div class="col-md-6 mt-4 mt-md-0">
         <div class="row justify-content-between">
-          <div class="col-12 p-0 justify-items-center">
+          <div class="col-12 p-0 justify-items-center" data-aos="fade-down" data-aos-delay="400">
             <a class="beneficiary-card" href="#esp-business" title="go to ESP Business">
               <i class="fa-solid fa-business-time"></i>
               <p class="mb-0">ESP Business</p>
             </a>
           </div>
-          <div class="col-5 p-0">
+          <div class="col-5 p-0" data-aos="fade-down" data-aos-delay="600">
             <a class="beneficiary-card" href="#esp-nonprofit" title="go to ESP Non-Profit">
               <i class="fa-solid fa-building-ngo"></i>
               <p class="mb-0">ESP Non-Profit</p>
             </a>
           </div>
-          <div class="col-5 p-0">
+          <div class="col-5 p-0" data-aos="fade-down" data-aos-delay="800">
             <a class="beneficiary-card" href="#esp-education" title="go to ESP Education">
               <i class="fa-solid fa-user-graduate"></i>
               <p class="mb-0">ESP Education</p>
             </a>
           </div>
-          <div class="col-12 p-0 justify-items-center">
+          <div class="col-12 p-0 justify-items-center" data-aos="fade-down" data-aos-delay="1000">
             <a class="beneficiary-card" href="#esp-government" title="go to ESP Government">
               <i class="fa-solid fa-landmark"></i>
               <p class="mb-0">ESP Government</p>
@@ -165,16 +165,16 @@
 </section>
 <!-- sec 3 - clientele brief -->
 <section class="clientele-brief py-custom gradient-bg">
-  <h1 class="text-center mb-5">{{ .Title }}</h1>
+  <h1 class="text-center mb-5" data-aos="fade-up">{{ .Title }}</h1>
 
   {{ range .Params.learning_solutions }}
   <div id="{{ .id }}" class="px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-up">
           <img src="{{ .image }}" alt="{{ .title }} Icon" class="image">
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8" data-aos="fade-up">
           <h3 class="title mt-4 mt-md-0">
             <i class="fa-solid {{ .icon }}"></i> {{ .title }}
           </h3>
@@ -182,41 +182,11 @@
           {{ range .description }}
           <p>{{ . }}</p>
           {{ end }}
-          <section class="row align-items-center mt-4 justify-content-center justify-content-md-start gap-3 btn-row">
+          <section class="row align-items-center mt-4 btn-row" data-aos="zoom-in" data-aos-delay="600">
             <div class="col-auto">
-              <a href="{{ .links.know_more }}" class="btn btn-primary">Know more</a>
-            </div>
-            <!-- Button to Trigger the Modal -->
-            <div class="col-auto d-none">
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#{{ .id }}Modal">
-                <i class="fa-regular fa-eye me-1"></i> View brochure
-              </button>
-            </div>
-          
-            <!-- Bootstrap Modal -->
-            <div class="modal fade" id="{{ .id }}Modal" tabindex="-1" aria-labelledby="{{ .id }}ModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered modal-xl">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="{{ .id }}ModalLabel">{{ .title }} Brochure</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <iframe src="https://drive.google.com/file/d/{{ .links.brochure.FILE_ID }}/preview" 
-                      title="Brochure {{ .title }}"
-                      width="100%" height="500px" style="border: none;">
-                    </iframe>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          
-            <div class="col-auto">
-              <a href="{{ .links.brochure.download_link | relURL }}" download class="btn btn-primary--outline">
-                <i class="fa-solid fa-download me-1"></i> Download brochure
+              <a href="{{ .links.know_more }}" class="btn btn-primary know-more-btn">
+                Know more
+                <i class="fas fa-chevron-right"></i>
               </a>
             </div>
           </section>
