--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -129,7 +129,7 @@
       <div class="col-md-4 text-center text-md-start">
         <h1 class="title display-5 fw-bold" data-aos="fade-down">Clientele</h1>
         <h3 class="subtitle mb-3" data-aos="fade-down" data-aos-delay="200" >Our Beneficiaries</h3>
-        <p class="desc" data-aos="fade-down" data-aos-delay="400">Whom we empower with our <br> ESP learning solutions....?</p>
+        <p class="desc" data-aos="fade-down" data-aos-delay="400">Whom do we empower with our <br> ESP learning solutions....?</p>
       </div>
       <!-- Right Section (Cards) -->
       <div class="col-md-6 mt-4 mt-md-0">
