--- a/themes/growth-sketch/assets/scss/pages/_singlepg.scss
+++ b/themes/growth-sketch/assets/scss/pages/_singlepg.scss
@@ -1,12 +1,13 @@
 @import '../abstracts/variables';
 
 //  clientele
-blockquote {
+.blockquote {
     background-color: $primary-clr--light; // Light gray background for the quote
     border-left: 5px solid #007bff; // Blue left border
     padding: 1.5rem;
     border-radius: 0.5rem;
-
+    font-size: 1.1rem!important;
+   
     @media (max-width: 576px) {
         font-size: 1.2rem; // Increase font size for mobile
     }
@@ -25,10 +26,10 @@ blockquote {
     // min-height: 40vh;
     // border: none; // Remove default card border
     padding: 0.5rem;
-    transition: transform 0.2s; // Smooth hover effect
+    // transition: transform 0.2s; // Smooth hover effect
 
     &:hover {
-        transform: scale(1.05); // Scale up on hover
+        // transform: scale(1); // Scale up on hover
     }
 
     .desc {
@@ -158,3 +159,6 @@ blockquote {
         }  
     }  
 }
+
+
+  
