--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -9,7 +9,7 @@
     <div class="row align-items-center justify-content-between">
       <div class="col-md-7 content py-5 py-md-0">
         <h1 
-          class="title text-light display-6 fw-bold" 
+          class="title text-light display-6 fw-semibold" 
           data-aos="fade-up" 
           data-aos-delay="0">{{ .Params.title }}</h1>
       
@@ -276,11 +276,11 @@
       <div class="col-md-7">
         <h3 class="section-heading">Our Core Belief</h3>
         <p class="">
-          Love people for who they are instead of judging them for what they are not. 
+          Love people for who they are, instead of judging them for what they are not.
         </p>
-        <p class="highlight-text text-accent">Essence is, accept people as they are!</p>
+        <p class="highlight-text text-accent">The essence is: accept people as they are!</p>
         <p class="">
-          Bridge the gap in required knowledge, skills, and practices which are appropriate to their aspirational growth goals.
+          Bridge the gap in required knowledge, skills and practices that align with their aspirational growth goals.
         </p>
       </div>
     </div>
