--- a/themes/growth-sketch/layouts/_default/single.html
+++ b/themes/growth-sketch/layouts/_default/single.html
@@ -24,64 +24,64 @@
 {{ if eq .Params.layout "clientele" }}
 <section class="clientele-details px-custom">
   <div class="container my-5">
-    <h1 class="text-primary text-center mb-4">{{ .Title }}</h1>
-    <blockquote class="blockquote text-center">
-      <p class="mb-0 fst-italic text">{{ .Params.intro_blockquote.text }}</p>
-      <footer class="blockquote-footer mt-2 fst-italic">{{ .Params.intro_blockquote.footer }}</footer>
-      <p class="mt-2 subtext ">{{ .Params.intro_blockquote.additional_text }}</p>
+    <!-- Title -->
+    <h2 class="text-primary text-center mb-4">{{ .Title }}</h2>
+    
+    <!-- Intro Blockquote -->
+    <blockquote class="blockquote">
+      {{ replace .Params.intro_blockquote.text "\n" "<br>" | safeHTML }}
     </blockquote>
-    <h2 class="text-center mt-5 mb-0 text-primary--dark">{{ .Params.intro }}</h2>
-    {{ range .Params.solutions }}
-
-    <div class="card-horizontal row align-items-center mt-5 neumorphism">
+    
+    <h5 class="mt-5 text-primary">{{.Params.intro}}</h5>
+    <!-- RTT - Ready To Train -->
+    {{ range .Params.ready_to_train }}
+    <div class="card-horizontal row align-items-center mt-4 neumorphism">
       <div class="img col-md-4">
         <img src="{{ .image | relURL }}" class="img-fluid" alt="{{ .alt }}" style="border-radius: 8px;">
       </div>
       <div class="desc col-md-8 mt-4 mt-md-0">
         <h3 class="title mb-3 text-primary">{{ .type }}</h3>
-        <h6 class="text fst-italic mb-4">{{ .subtitle }}</h6>
-        <p>{{ .description }}</p>
+        <p>{{ replace .description "\n" "<br>" | safeHTML }}</p>
+        {{ if .list }}
+          <div class="list-points">
+            {{ replace .list "\n" "<br>" | safeHTML }}
+          </div>
+        {{ end }}
       </div>
     </div>
     {{ end }}
-    <hr class="bg-accent">
-
-    <h5 class="text-center">Brochures</h5>
-    <div class="d-flex gap-4 justify-content-center my-4">
-      <!-- Button to Trigger the Modal -->
-      <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#pdfModal">
-        <i class="fa-regular fa-eye me-1"></i> View
-      </button>
-
-      <!-- Bootstrap Modal -->
-      <div class="modal fade" id="pdfModal" tabindex="-1" aria-labelledby="pdfModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-xl">
-          <!-- Adjust modal size with 'modal-xl' for large content -->
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="pdfModalLabel">Brochure</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <!-- Embed PDF in an iframe -->
-              <iframe src="https://drive.google.com/file/d/{{ .Params.brochure.FILE_ID }}/preview" width="100%"
-                height="500px" style="border: none;">
-              </iframe>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
+    
+    <!-- CTDD - Customized Training Design & Development -->
+    {{ range .Params.solutions }}
+    <div class="card-horizontal row align-items-center mt-4 neumorphism">
+      <div class="img col-md-4">
+        <img src="{{ .image | relURL }}" class="img-fluid" alt="{{ .alt }}" style="border-radius: 8px;">
       </div>
-
-
-      <a href="{{ .Params.brochure.download_link | relURL }}" download class="btn btn-primary--outline mx-2"><i
-          class="fa-solid fa-download me-1"></i> Download</a>
+      <div class="desc col-md-8 mt-4 mt-md-0">
+        <h3 class="title mb-3 text-primary">{{ .type }}</h3>
+        <p>{{ replace .description "\n" "<br>" | safeHTML }}</p>
+        {{ if .list }}
+          <div class="list-points">
+            {{ replace .list "\n" "<br>" | safeHTML }}
+          </div>
+        {{ end }}
+      </div>
+    </div>
+    {{ end }}
+    
+    <!-- <hr class="bg-accent"> -->
+    
+    <!-- Brochure Button -->
+    <div class="text-center my-4">
+      <a href="{{ .Params.brochure.view_link | relURL }}" target="_blank" rel="noopenner" class="btn btn-primary">
+        <i class="fa-solid fa-eye me-1"></i> View Brochure
+      </a>
     </div>
   </div>
 </section>
 {{ end }}
+
+
 
 {{ if eq .Params.layout "other" }}
 <section class="cards-section py-custom">
